# AI_Poet_Article_with_Caching

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
ai_poet/: __init__.py  cache.py  cli.py  client.py  config.py  exceptions.py  generator.py  prompts.py
tests/: test_client.py
