[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-poet"
version = "0.1.0"
description = "Tiny SDK + CLI that talks to euron.one chat-completion API"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic>=1.10,<3",
    "redis>=6.1.1",
]
